--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-1.jpg);">
+						<div class="work-grid" style="background-image:url(images/bivar.png);">
 							<div class="inner">
 								<div class="desc">
 								<h3>Folding Light</h3>
@@ -113,7 +113,7 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-2.jpg);">
+						<div class="work-grid" style="background-image:url(images/thumb.png);">
 							<div class="inner">
 								<div class="desc">
 									<h3>Power Led Light</h3>
@@ -125,7 +125,7 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-3.jpg);">
+						<div class="work-grid" style="background-image:url(images/map.png);">
 							<div class="inner">
 								<div class="desc">
 									<h3>Elephant Origami</h3>
