--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 			<div class="fh5co-top-social menu-1 text-right">
 				<ul class="fh5co-social">
 					<li><a href="#"><i class="icon-twitter"></i></a></li>
-					<li><a href="#"><i class="icon-dribbble"></i></a></li>
+					<li><a href="#"><i class="icon-medium"></i></a></li>
 					<li><a href="#"><i class="icon-github"></i></a></li>
 				</ul>
 			</div>
@@ -103,8 +103,8 @@
 						<div class="work-grid" style="background-image:url(images/bivar.png);">
 							<div class="inner">
 								<div class="desc">
-								<h3>Folding Light</h3>
-								<span class="cat">Branding</span>
+								<h3>Coronavirus and population density</h3>
+								<span class="cat">R</span>
 							</div>
 							</div>
 						</div>
