--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
 							<div class="inner">
 								<div class="desc">
 								<h3>Coronavirus and population density</h3>
-								<span class="cat">R</span>
+								<span class="cat">Made with R</span>
 							</div>
 							</div>
 						</div>
