--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 						<div class="work-grid" style="background-image:url(images/thumb.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Power Led Light</h3>
-									<span class="cat">Illustration</span>
+									<h3>On the radar</h3>
+									<span class="cat">Made with R</span>
 								</div>
 							</div>
 						</div>
@@ -127,8 +127,8 @@
 						<div class="work-grid" style="background-image:url(images/map.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Elephant Origami</h3>
-									<span class="cat">Logo</span>
+									<h3>Who's pirating academic journals?</h3>
+									<span class="cat">Made with R & Carto</span>
 								</div>
 							</div>
 						</div>
@@ -136,11 +136,11 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-4.jpg);">
+						<div class="work-grid" style="background-image:url(images/users_by_device.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Electric Kick Scooter</h3>
-									<span class="cat">Web Design</span>
+									<h3>Changing habits</h3>
+									<span class="cat">Made with Google DataStudio</span>
 								</div>
 							</div>
 						</div>
