--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-5.jpg);">
+						<div class="work-grid" style="background-image:url(images/Rplot22.png);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Shark Diver</h3>
+									<h3>Diamonds</h3>
 									<span class="cat">Branding</span>
 								</div>
 							</div>
