--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -95,13 +95,13 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
-					<h2>The Aloha Shirt</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove</p>
+					<h2>Coronavirus and population density in England</h2>
+					<p>in April 2019, I used univariate and bivariate mapping of population denses and coronavirus cases in England.</p>
 					
 					<div class="role">
-						<h3>Role</h3>
+						<h3>Tools</h3>
 						<ul>
-							<li>Front-end Design</li>
+							<li>R</li>
 							<li>Branding</li>
 							<li>Information Architecture</li>
 							<li>Data Gathering</li>
