--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -96,8 +96,8 @@
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>Coronavirus and population density in England</h2>
-					<p>in April 2019, I used univariate and bivariate mapping to visualise population density and coronavirus cases in England.</p>
-					<p>I explored COVID-19 cases per 100,000 inhabitant, identifying outliers and areas of interest</p>
+					<p>in April 2020, I used univariate and bivariate mapping to visualise population density and coronavirus cases in England.</p>
+					<p>I explored COVID-19 cases per 100,000 inhabitants, identifying outliers and areas of interest</p>
 					<div class="role">
 						<h3>Tools</h3>
 						<ul>
@@ -118,9 +118,9 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p class="animate-box"><img src="bivar.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="uni_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="popdense_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/bivar.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/uni_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/popdense_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 						<blockquote>
 							<p>&ldquo;Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove&rdquo;</p>
