--- a/portfolio_detail.html
+++ b/portfolio_detail.html
@@ -113,7 +113,7 @@
 						</ul>
 					</div>
 
-					<p><a href="#" class="btn btn-primary">Visit Website</a></p>
+					<p><a href="https://medium.com/@jonathan.dickins90/univariate-and-bivariate-mapping-of-coronavirus-in-england-1fab3a4bb2d0" class="btn btn-primary">Read more</a></p>
 				</div>
 			</div>
 			<div class="row">
