--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
+					<a class="work" href="covid_mapping.html">
 						<div class="work-grid" style="background-image:url(images/bivar.png);">
 							<div class="inner">
 								<div class="desc">
