--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
+					<a class="work" href="diamonds.html">
 						<div class="work-grid" style="background-image:url(images/Rplot25.png);">
 							<div class="inner">
 								<div class="desc">
