--- a/diamonds.html
+++ b/diamonds.html
@@ -97,6 +97,9 @@
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>Visualising 54,000 diamonds</h2>
 					<p>I used circle packing techniques to visualise the famous diamonds dataset, plotting a circle for each diamond and it's colour representing its carat weight</p>
+					<p>A diamond's carat weight does not increase linearly with its physical size, and you can see this in the fi</p>
+
+					
 					<div class="role">
 						<h3>Tools</h3>
 						<ul>
@@ -118,6 +121,11 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<p class="animate-box"><img src="images/diamonds.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<div class="testimony animate-box">
+						
+	         <div class="row">
+				<div class="col-md-8 col-md-offset-2">
+					<p class="animate-box"><img src="images/zoom.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 		
 					</div>
