--- a/diamonds.html
+++ b/diamonds.html
@@ -96,8 +96,8 @@
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>Visualising 54,000 diamonds</h2>
-					<p>I used circle packing techniques to visualise the famous diamonds dataset, plotting a circle for each diamond and it's colour representing its carat weight</p>
-					<p>A diamond's carat weight does not increase linearly with its physical size, and you can see this in the fi</p>
+					<p>I used circle packing  to visualise the famous diamonds dataset, plotting a circle for each diamond with it's colour representing its carat weight</p>
+					<p>A diamond's carat weight does not increase linearly with its physical size, and you can see this in the figure. There is a cluster of higher-carat diamonds at the center, but high-carat diamonds come in all sizes</p>
 
 					
 					<div class="role">
