--- a/index.html
+++ b/index.html
@@ -136,10 +136,10 @@
 				</div>
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="portfolio_detail.html">
-						<div class="work-grid" style="background-image:url(images/project-6.jpg);">
+						<div class="work-grid" style="background-image:url(images/Rplot10.svg);">
 							<div class="inner">
 								<div class="desc">
-									<h3>Objekte Unserer Tage Berlin</h3>
+									<h3>Test</h3>
 									<span class="cat">Logo</span>
 								</div>
 							</div>
