--- a/radar.html
+++ b/radar.html
@@ -109,7 +109,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p class="animate-box"><img src="images/diamonds.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/4kc1po.gif" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 						
 	         <div class="row">
