--- a/index.html
+++ b/index.html
@@ -76,6 +76,18 @@
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="covid_mapping.html">
+						<div class="work-grid" style="background-image:url(images/hhmap.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Flooding Hengistbury Head</h3>
+								<span class="cat">Made with Rayshader</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="covid_mapping.html">
 						<div class="work-grid" style="background-image:url(images/bivar.png);">
 							<div class="inner">
 								<div class="desc">
