--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 						<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="hengistburyhead.html">
-						<div class="work-grid" style="background-image:url(images/so_thumb.jpeg);">
+						<div class="work-grid" style="background-image:url(images/so_thumb.jpg);">
 							<div class="inner">
 								<div class="desc">
 								<h3>The first line of code</h3>
