--- a/index.html
+++ b/index.html
@@ -142,9 +142,11 @@
 						<div class="author-inner animate-box" style="background-image: url(images/person3.jpg);">
 						</div>
 						<div class="desc animate-box">
-							<span>Web Designer &amp; Developer</span>
-							<h3>Mike Airways</h3>
-							<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+							<span>Analyst and Designer</span>
+							<h3>Jonathan Dickins</h3>
+							<p>Nice to have you here.</p>
+							<p>I'm a data analyst and visualisation developer, particularly interested in research and education markets. I hold a PhD from the University of Southampton in cogitive 
+							psychology, and have 8 years of experience deriving and communicating insights from data</p>
 							<p><a href="about.html" class="btn btn-primary btn-outline">Learn More</a></p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-facebook"></i></a></li>
