--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
 							<h3>Jonathan Dickins</h3>
 							<p>Nice to have you here.</p>
 							<p>I'm a data analyst and visualisation developer, particularly interested in research and education markets. I hold a PhD from the University of Southampton in cogitive 
-							psychology, and have 8 years of experience deriving and communicating insights from data</p>
+							psychology, and have 8 years of experience deriving and communicating insights from data.</p>
 
 						</div>
 					</div>
