--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<div class="author">
-						<div class="author-inner animate-box" style="background-image: url(images/person3.jpg);">
+						<div class="author-inner animate-box" style="background-image: url(images/1517608114498.jfif);">
 						</div>
 						<div class="desc animate-box">
 							<span>Analyst and Designer</span>
