--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 		<div class="container">
 			<div class="row animate-box">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>A little about me</h2>
+					<h2>About me</h2>
 				</div>
 			</div>
 			<div class="row">
