--- a/index.html
+++ b/index.html
@@ -50,6 +50,19 @@
 				</div>
 				
 			</div>
+			<div class="row">
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="hengistburyhead.html">
+						<div class="work-grid" style="background-image:url(images/heatmapcovid.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Covid in London</h3>
+								<span class="cat">Made with R</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
 						<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="hengistburyhead.html">
