--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 			</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="hengistburyhead.html">
+					<a class="work" href="covidlondon.html">
 						<div class="work-grid" style="background-image:url(images/heatmapcovid.png);">
 							<div class="inner">
 								<div class="desc">
