--- a/covidlondon.html
+++ b/covidlondon.html
@@ -63,7 +63,7 @@
 	<nav class="fh5co-nav" role="navigation">
 		<div class="container">
 			<div class="fh5co-top-logo">
-				<div id="fh5co-logo"><a href="index.html">Shift</a></div>
+				<div id="fh5co-logo"><a href="index.html">JD</a></div>
 			</div>
 
 		</div>
@@ -73,9 +73,9 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
-					<h2>Coronavirus and population density in England</h2>
-					<p>in April 2020, I used univariate and bivariate mapping to visualise population density and coronavirus cases in England.</p>
-					<p>I explored COVID-19 cases per 100,000 inhabitants, identifying outliers and areas of interest</p>
+					<h2>Charting coronaviruses in London</h2>
+					<p>I used heatmaps to explore the progression of covid case rates among London boroughs.</p>
+					<p>The heatmaps bring out how </p>
 					<div class="role">
 						<h3>Tools</h3>
 						<ul>
@@ -91,15 +91,14 @@
 						</ul>
 					</div>
 
-					<p><a href="https://medium.com/@jonathan.dickins90/univariate-and-bivariate-mapping-of-coronavirus-in-england-1fab3a4bb2d0" class="btn btn-primary">Read more</a></p>
 				<p><a href="https://github.com/jonathan-dickins/uk-covid19" class="btn btn-primary">View code</a></p>
 
 					</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
-					<p class="animate-box"><img src="images/bivar.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="images/uni_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/covidboroughs.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/covidboroughsmap.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<p class="animate-box"><img src="images/popdense_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 		
