--- a/covidlondon.html
+++ b/covidlondon.html
@@ -73,9 +73,10 @@
 		<div class="container">
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
-					<h2>Charting coronaviruses in London</h2>
-					<p>I used heatmaps to explore the progression of covid case rates among London boroughs.</p>
-					<p>The heatmaps bring out how </p>
+					<h2>Charting coronavirus in London</h2>
+					<p>I used heatmaps to explore the progression of Covid case rates among London boroughs.</p>
+					<p>The heatmaps bring out the relationship between population size and the progression of the surge in Covid cases
+					in early 2021</p>
 					<div class="role">
 						<h3>Tools</h3>
 						<ul>
@@ -91,15 +92,12 @@
 						</ul>
 					</div>
 
-				<p><a href="https://github.com/jonathan-dickins/uk-covid19" class="btn btn-primary">View code</a></p>
-
-					</div>
+									</div>
 			</div>
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2">
 					<p class="animate-box"><img src="images/covidboroughs.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<p class="animate-box"><img src="images/covidboroughsmap.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
-					<p class="animate-box"><img src="images/popdense_final.png" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 		
 					</div>
@@ -111,17 +109,7 @@
 		</div>
 	</div>
 
-	<div id="fh5co-started">
-		<div class="container">
-			<div class="row animate-box">
-				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>Get Started</h2>
-					<p>We create beautiful themes for your site behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-					<p><a href="#" class="btn btn-primary">Let's work together</a></p>
-				</div>
-			</div>
-		</div>
-	</div>
+	
 
 	<footer id="fh5co-footer" role="contentinfo">
 		<div class="container">
