--- a/index.html
+++ b/index.html
@@ -147,6 +147,10 @@
 							<h3>Jonathan Dickins</h3>
 							<p>I'm a data analyst and visualisation developer, particularly interested in research and education markets. I hold a PhD from the University of Southampton in cogitive 
 							psychology, and have 8 years of experience deriving and communicating insights from data.</p>
+							<ul class="fh5co-social-icons">
+								<li><a href="https://www.linkedin.com/in/jonathan-dickins-4b5367b5/"><i class="icon-linkedin"></i></a></li>
+								<li><a href="https://github.com/jonathan-dickins"><i class="icon-github"></i></a></li>
+							</ul>
 
 						</div>
 					</div>
