--- a/radar.html
+++ b/radar.html
@@ -9,7 +9,8 @@
 	<meta name="keywords" content="data, analysis, data science, Jonathan Dickins, R, ggplot, dataviz, visualisation" />
 	<meta name="author" content="JD" />
 
-
+	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
+	<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
   		
 	<!-- Animate.css -->
 	<link rel="stylesheet" href="css/animate.css">
