--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 					</a>
 				</div>
 				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="portfolio_detail.html">
+					<a class="work" href="#">
 						<div class="work-grid" style="background-image:url(images/map.png);">
 							<div class="inner">
 								<div class="desc">
