--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 							<div class="inner">
 								<div class="desc">
 									<h3>Diamonds</h3>
-									<span class="cat">Branding</span>
+									<span class="cat">Made with R</span>
 								</div>
 							</div>
 						</div>
