--- a/diamonds.html
+++ b/diamonds.html
@@ -10,6 +10,17 @@
 	<meta name="author" content="JD" />
 
 
+  	<!-- Facebook and Twitter integration -->
+	<meta property="og:title" content=""/>
+	<meta property="og:image" content=""/>
+	<meta property="og:url" content=""/>
+	<meta property="og:site_name" content=""/>
+	<meta property="og:description" content=""/>
+	<meta name="twitter:title" content="" />
+	<meta name="twitter:image" content="" />
+	<meta name="twitter:url" content="" />
+	<meta name="twitter:card" content="" />
+
 	<!-- <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet"> -->
 	<!-- <link href="https://fonts.googleapis.com/css?family=Playfair+Display:400,400i" rel="stylesheet"> -->
 	
@@ -36,7 +47,14 @@
 	<div class="fh5co-loader"></div>
 	
 	<div id="page">
-	</div>
+	<nav class="fh5co-nav" role="navigation">
+		<div class="container">
+			<div class="fh5co-top-logo">
+				<div id="fh5co-logo"><a href="index.html">JD</a></div>
+			</div>
+			
+			</div>
+		</div>
 	</nav>
 	
 	<div id="fh5co-author">
@@ -107,4 +125,3 @@
 
 	</body>
 </html>
-
