--- a/radar.html
+++ b/radar.html
@@ -53,15 +53,17 @@
 			<div class="row top-line animate-box">
 				<div class="col-md-6 col-md-offset-3 col-md-push-2 text-left fh5co-heading">
 					<h2>So many choices: Players in Fantasy Premier League</h2>
-					<p>I built a pipeline to scrape, clean, and visualise data from Fantasy Premier League players </p>
+					<p>I built a pipeline to scrape, clean, and visualise data from Fantasy Premier League players into a Shiny web app. </p>
 					<p>Each radar shows how a player performs compared to other players in the same position, assigning a percentile rank across a number of metrics. </p>
+					<p>x.com/fpl_radar </p>
+
 
 					
 					<div class="role">
 						<h3>Tools</h3>
 						<ul>
 							<li>R</li>
-              <li>VBA</li>
+              <li>Shiny</li>
 
 						</ul>
 					<div class="role">
@@ -69,17 +71,16 @@
 						<ul>
 							<li>Web scraping</li>
 							<li>Data cleaning</li>
+							<li>App development</li>
               <li>Data visualisation</li>
 						</ul>
 					</div>
-
-				<p><a href="https://github.com/jonathan-dickins/uk-covid19" class="btn btn-primary">View code</a></p>
 
 					</div>
 			</div>
 			<div class="row">
 				<div class="col-md-6 col-md-offset-1">
-					<p class="animate-box"><img src="images/4kc1po.gif" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
+					<p class="animate-box"><img src="images/Cole Palmer1.jpeg" class="img-responsive" alt="Free HTML5 Template by FreeHTML5.co"></p>
 					<div class="testimony animate-box">
 						
 
