--- a/index.html
+++ b/index.html
@@ -72,6 +72,18 @@
 						</div>
 					</a>
 				</div>
+                <div class="col-md-4 text-center animate-box">
+					<a class="work" href="chem_mapping.html">
+						<div class="work-grid" style="background-image:url(images/travel_cropped.jpeg);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Chemistry cold spots</h3>
+								<span class="cat">Made with R</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
 				
 							<div class="col-md-4 text-center animate-box">
 					<a class="work" href="hengistburyhead.html">
@@ -204,4 +216,3 @@
 
 	</body>
 </html>
-
