--- a/index.html
+++ b/index.html
@@ -59,6 +59,19 @@
 				</div>
 				
 			</div>
+				<div class="row">
+				<div class="col-md-4 text-center animate-box">
+					<a class="work" href="gameweek_graphics.html">
+						<div class="work-grid" style="background-image:url(images/gameweek_graphics.png);">
+							<div class="inner">
+								<div class="desc">
+								<h3>Gameweek Graphics</h3>
+								<span class="cat">Made with R</span>
+							</div>
+							</div>
+						</div>
+					</a>
+				</div>
 			<div class="row">
 				<div class="col-md-4 text-center animate-box">
 					<a class="work" href="covidlondon.html">
