--- a/index.html
+++ b/index.html
@@ -51,118 +51,122 @@
 
 	</nav>
 	
-	<div id="fh5co-work">
-		<div class="container">
-			<div class="row top-line animate-box">
-				<div class="col-md-7 col-md-push-5 text-left intro">
-					<h2>Jonathan Dickins <span class="fh5co-highlight">Data analysis | Data visualisation </span></h2>
-				</div>
-				
-			</div>
-				<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="gameweek_graphics.html">
-						<div class="work-grid" style="background-image:url(images/gameweek_graphics.png);">
-							<div class="inner">
-								<div class="desc">
-								<h3>Gameweek Graphics</h3>
-								<span class="cat">Made with R</span>
-							</div>
-							</div>
-						</div>
-					</a>
-				</div>
-			<div class="row">
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="covidlondon.html">
-						<div class="work-grid" style="background-image:url(images/heatmapcovid.png);">
-							<div class="inner">
-								<div class="desc">
-								<h3>Covid in London</h3>
-								<span class="cat">Made with R</span>
-							</div>
-							</div>
-						</div>
-					</a>
-				</div>
-                <div class="col-md-4 text-center animate-box">
-					<a class="work" href="chem_mapping.html">
-						<div class="work-grid" style="background-image:url(images/travel_cropped.jpeg);">
-							<div class="inner">
-								<div class="desc">
-								<h3>Chemistry cold spots</h3>
-								<span class="cat">Made with R</span>
-							</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				
-							<div class="col-md-4 text-center animate-box">
-					<a class="work" href="hengistburyhead.html">
-						<div class="work-grid" style="background-image:url(images/hhmap.png);">
-							<div class="inner">
-								<div class="desc">
-								<h3>Flooding Hengistbury Head</h3>
-								<span class="cat">Made with Rayshader</span>
-							</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="covid_mapping.html">
-						<div class="work-grid" style="background-image:url(images/bivar.png);">
-							<div class="inner">
-								<div class="desc">
-								<h3>Coronavirus and population density</h3>
-								<span class="cat">Made with R</span>
-							</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="radar.html">
-						<div class="work-grid" style="background-image:url(images/thumb.png);">
-							<div class="inner">
-								<div class="desc">
-									<h3>On the radar</h3>
-									<span class="cat">Made with R</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="#">
-						<div class="work-grid" style="background-image:url(images/map.png);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Who's pirating academic journals?</h3>
-									<span class="cat">Made with R & Carto</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
+<div id="fh5co-work">
+  <div class="container">
+    <div class="row top-line animate-box">
+      <div class="col-md-7 col-md-push-5 text-left intro">
+        <h2>Jonathan Dickins <span class="fh5co-highlight">Data analysis | Data visualisation </span></h2>
+      </div>
+    </div>
 
-				<div class="col-md-4 text-center animate-box">
-					<a class="work" href="diamonds.html">
-						<div class="work-grid" style="background-image:url(images/Rplot25.png);">
-							<div class="inner">
-								<div class="desc">
-									<h3>Diamonds</h3>
-									<span class="cat">Made with R</span>
-								</div>
-							</div>
-						</div>
-					</a>
-				</div>
+    <!-- Single Row Wrapping All Cols -->
+    <div class="row">
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="gameweek_graphics.html">
+          <div class="work-grid" style="background-image:url(images/gameweek_graphics.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Gameweek Graphics</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
 
-		</div>
-		</div>
-	</div>
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="covidlondon.html">
+          <div class="work-grid" style="background-image:url(images/heatmapcovid.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Covid in London</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="chem_mapping.html">
+          <div class="work-grid" style="background-image:url(images/travel_cropped.jpeg);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Chemistry cold spots</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="hengistburyhead.html">
+          <div class="work-grid" style="background-image:url(images/hhmap.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Flooding Hengistbury Head</h3>
+                <span class="cat">Made with Rayshader</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="covid_mapping.html">
+          <div class="work-grid" style="background-image:url(images/bivar.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Coronavirus and population density</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="radar.html">
+          <div class="work-grid" style="background-image:url(images/thumb.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>On the radar</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="#">
+          <div class="work-grid" style="background-image:url(images/map.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Who's pirating academic journals?</h3>
+                <span class="cat">Made with R & Carto</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+
+      <div class="col-md-4 text-center animate-box">
+        <a class="work" href="diamonds.html">
+          <div class="work-grid" style="background-image:url(images/Rplot25.png);">
+            <div class="inner">
+              <div class="desc">
+                <h3>Diamonds</h3>
+                <span class="cat">Made with R</span>
+              </div>
+            </div>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
 	
 	<div id="fh5co-author" class="fh5co-bg-section">
 		<div class="container">
