--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <!-- Single Row Wrapping All Cols -->
     <div class="row">
       <div class="col-md-4 text-center animate-box">
-        <a class="work" href="gameweek_graphics.html">
+        <a class="work" href="https://fplradar.beehiiv.com">
           <div class="work-grid" style="background-image:url(images/gameweek_graphics.png);">
             <div class="inner">
               <div class="desc">
